# GrantGenie

./: .dockerignore  .env.example  .gitignore  18-grantgenie.md  AGENTS.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-ai-service.yml  ci-backend.yml  ci-frontend.yml  deploy.yml  eval-gates.yml  security.yml
.husky/: pre-commit
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
ai-service/: Dockerfile  README.md  pyproject.toml
ai-service/src/grantgenie_ai/: __init__.py
ai-service/src/grantgenie_ai/api/: main.py  router.py
ai-service/src/grantgenie_ai/core/: __init__.py  config.py  logging.py  telemetry.py
ai-service/src/grantgenie_ai/domain/: __init__.py
ai-service/src/grantgenie_ai/eval/: __init__.py
ai-service/src/grantgenie_ai/generation/: __init__.py
ai-service/src/grantgenie_ai/retrieval/: __init__.py
ai-service/src/grantgenie_ai/safety/: __init__.py
backend/: Dockerfile  composer.json  phpstan.neon  pint.json
backend/app/Console/Commands/: PublishOutboxCommand.php
backend/app/Exceptions/: ProblemDetailsHandler.php
backend/app/Logging/: InjectContextProcessor.php
backend/app/Observability/: ObservabilityServiceProvider.php  Tracer.php
backend/app/Providers/: AppServiceProvider.php
backend/bootstrap/: app.php  providers.php
backend/config/: ai_service.php  auth.php  logging.php  messaging.php
backend/database/migrations/: 2026_07_03_000001_create_pgvector_extension.php  2026_07_03_000002_create_identity_tables.php  2026_07_03_000003_create_org_profiles_table.php  2026_07_03_000004_create_grant_tables.php  2026_07_03_000005_create_boilerplate_tables.php  2026_07_03_000006_create_proposal_tables.php  2026_07_03_000007_create_tracking_and_infrastructure_tables.php
backend/database/seeders/: RoleSeeder.php
backend/routes/: api.php
backend/tests/: Pest.php
backend/tests/Architecture/: CleanArchitectureTest.php
docs/client/: GrantGenie-Client-Documentation.md  GrantGenie-LinkedIn-Pitch.md  GrantGenie-Presentation-Outline.md  GrantGenie-Presentation.pptx  build_pptx.py
frontend/: .prettierignore  .prettierrc.json  Dockerfile  README.md  angular.json  eslint.config.js  openapi.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/environments/: environment.prod.ts  environment.ts
infra/prometheus/: prometheus.yml
specs/001-grantgenie-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-grantgenie-core/checklists/: requirements.md
specs/001-grantgenie-core/contracts/: ai-service-http.yaml  api-openapi.yaml  events.md
(+27 files in other folders)
